--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
   </ciManagement>
 
   <properties>
-    <hazelcast.version>3.0-SNAPSHOT</hazelcast.version>
+    <hazelcast.version>3.0</hazelcast.version>
   </properties>
 
   <dependencies>
