--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.noctarius.castmapr</groupId>
   <artifactId>castmapr</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <description>MapReduce Implementation for Hazelcast 3</description>
   <inceptionYear>2013</inceptionYear>
   <url>http://github.com/noctarius/castmapr</url>
